<resources>
    <string name="app_name">智梦人</string>

    <string name="company_name">珠海智梦人科技有限公司</string>

    <string name="bottom_home">首页</string>
    <string name="bottom_health">健康建议</string>
    <string name="bottom_message">消息</string>

    <string name="bottom_set">设置</string>

    <string name="health_nearby">附近医疗</string>

    <string name="set_voice">声音</string>
    <string name="set_shake">震动</string>

    <string name="set_alarm">报警设置</string>
    <string name="temp_home">体温计</string>
    <string name="set_lost">防丢功能</string>
    <string name="set_fever">发烧报警</string>
    <string name="set_fever_temp">报警温度</string>
    <string name="set_type">报警方式</string>
    <string name="set_decive">设备</string>
    <string name="set_myhome">我的家庭</string>
    <string name="set_unlogin">未登录</string>
    <string name="set_help">使用帮助</string>
    <string name="set_about">关于</string>
    <string name="set_more">更多</string>
    <string name="set_retsetpwd">重置密码</string>
    <string name="find_pwd">找回密码</string>
    <string name="set_update">版本更新</string>
    <string name="set_about_us">联系我们</string>
    <string name="set_disclaimer">免责声明</string>
    <string name="set_feedback">问题反馈</string>


    <string name="home_in_temp">室内温度: 28</string>
    <string name="home_baby_temp">37.5</string>

    <string name="hua_unit">℉</string>
    <string name="shishi_unit">℃</string>

    <string name="loading">加载中...</string>
    <string name="mobile_phone">手机号</string>
    <string name="password">密码</string>
    <string name="no_account_now_signup">还没有账户？现在注册</string>
    <string name="verify_code">验证码</string>
    <string name="get_vetify_code">获取验证码</string>
    <string name="confirm_password">确认密码</string>
    <string name="complete_signup">完成注册</string>
    <string name="login">登录</string>
    <string name="login_out">账户登出</string>
    <string name="signup">注册</string>

    <string name="curry_password">当前密码</string>
    <string name="new_password">新密码</string>
    <string name="comfirm_password">确认新密码</string>
    <string name="input_password">请输入当前密码</string>
    <string name="input_new_password">输入新密码</string>
    <string name="new_password_wrong_format_hint">新密码必须有6-20位字符组成</string>


    <string name="please_input_mobile_phone">手机号码不能为空</string>
    <string name="please_input_password">密码不能为空</string>
    <string name="wrong_mobile_phone">手机号码输入不正确</string>
    <string name="mobile_phone_or_password_error">手机号或密码错误</string>
    <string name="please_input_verify_code">请输入验证码</string>
    <string name="please_input_nickname">昵称不能为空</string>
    <string name="please_enter_correct_verify_code_format">请输入正确格式验证码</string>
    <string name="verify_have_send">验证码已发送</string>
    <string name="get_verify_code_again">重新获取验证码</string>
    <string name="login_failure">用户名或者密码错误</string>
    <string name="login_success">登录成功</string>
    <string name="find_success">成功找回密码</string>
    <string name="btn_ok">提交</string>
    <string name="please_enter_correct_password_format">请输入正确格式的密码</string>
    <string name="password_wrong_format_hint">"密码必须有6-20位字符组成"</string>
    <string name="two_passwords_differ_hint">"请注意两次密码输入不一致哦"</string>
    <string name="please_input_six">输入6位的短信验证码</string>
    <string name="resend_after">秒后重新发送</string>
    <string name="del">删除</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="is_del_baby">是否删除?</string>
    <string name="is_open_blue">是否允许打开蓝牙设备?</string>

    <string name="add_baby">添加宝宝</string>
    <string name="save_baby">保存</string>
    <string name="my_baby">我的宝宝</string>
    <string name="baby_name">宝宝姓名</string>
    <string name="baby_age">出生日期</string>
    <string name="baby_sex">性别</string>
    <string name="baby_high">身高</string>
    <string name="baby_weight">体重</string>
    <string name="bound">绑定</string>
    <string name="bounded">已绑定</string>


    <string name="baby_fever_tem">体温</string>
    <string name="baby_fever_time">时间</string>
    <string name="baby_fever_wuli">物理降温</string>
    <string name="baby_fever_yao">服药</string>
    <string name="baby_add_history">添加记录</string>

    <string name="camera">照相</string>
    <string name="album">相册</string>
    <string name="photo_choose">图片选择</string>


    <string name="scanning">正在搜索设备...</string>
    <string name="select_device">选择一个设备进行连接</string>
    <string name="none_found">未搜索到蓝牙设备</string>
    <string name="connected_outtime"> 连接超时</string>
    <string name="not_connected">未连接蓝牙设备</string>
    <string name="bt_not_enabled_leaving">蓝牙设备未打开</string>
    <string name="title_connecting">正在连接...</string>
    <string name="title_connected_to">已连接: </string>
    <string name="title_not_connected">未连接</string>
    <string name="button_scan">搜索设备</string>


    <!-- 平台名称 -->
    <string name="umeng_socialize_text_wenxin_fav">微信收藏</string>
    <string name="umeng_socialize_text_sina_key">微博</string>
    <string name="umeng_socialize_text_qq_key">QQ</string>
    <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
    <string name="umeng_socialize_text_weixin_key">微信</string>
    <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
    <string name="umeng_socialize_text_weixin_fav_key">微信收藏</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_socialize_text_waitting_share">分享中&#8230;</string>
    <string name="umeng_socialize_content_hint">说点啥&#8230;</string>
    <string name="umeng_socialize_cancel_btn_str">取消</string>
    <string name="umeng_socialize_send_btn_str">发送</string>
    <string name="umeng_socialize_img_des"></string>
    <string name="umeng_socialize_share">分享</string>

    <string name="umeng_socialize_sina">新浪</string>
    <string name="title_activity_more">MoreActivity</string>
    <string name="complain_text">亲，哪里不给力？欢迎指导建议！</string>


    <string name="device_name">设备名称</string>
    <string name="device_weight">重量</string>
    <string name="device_accuracy">精度</string>
    <string name="device_battery">电池</string>
    <string name="device_quantity">电量</string>
    <string name="device_way">连接方式</string>


    <string name="press_ask">点击说话</string>
    <string name="text_begin">请开始说话…</string>
    <string name="text_update">同步</string>

    <string name="open_lose">已开启防走丟功能</string>
    <string name="close_lose">已关闭防丟功能</string>
    <string name="close_shock">已关闭震动</string>
    <string name="open_shock">已开启震动</string>

    <string name="write_baby_name">请填写宝宝名称</string>
    <string name="please_add_baby">还没添加宝宝，请点击右上角添加宝宝</string>
    <string name="please_add_user">还没添加孩子，请点击右上角添加孩子</string>
    <string name="add_baby_time">请填写时间</string>
    <string name="add_baby_tem">请填写温度</string>
    <string name="title_activity_synchronize">SynchronizeActivity</string>

    <string name="synchronize_auto">自动同步</string>
    <string name="synchronize_wifi">仅无线网络下同步</string>
    <string name="synchronize_right_now">立即同步</string>
    <string name="synchronize_yun">数据同步</string>

    <string name="my_location">我的位置</string>
    <string name="baby_location">宝宝位置</string>
    <string name="check_temp"> 体温检测</string>
    <string name="connected"> 连接</string>

    <string name="my_child">我的孩子</string>
    <string name="my_qr_code">二维码</string>
    <string name="connected_child">绑定孩子</string>
    <string name="my">我的</string>

    <string name="nick_name">昵称</string>
    <string name="my_hendimg">头像</string>
    <string name="my_phone">电话号码</string>
    <string name="my_profile">我的资料</string>
    <string name="my_edit_name">编辑姓名</string>
    <string name="baby_list">宝宝列表</string>
    <string name="child_baby_location">位置</string>


    <string name="health_search">搜索</string>
    <string name="expand">展开</string>
    <string name="shrink">收起</string>
    <string name="title_activity_detail_tie">DetailTieActivity</string>
    <string name="tts_toast_format" formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>
    <string name="please_input_content">请输入搜索内容</string>
    <string name="search_nothing">抱歉，没有搜索到东西。。。</string>

    <string name="nearby_medice">附近药店</string>
    <string name="nearby_store">附近医院</string>

    <string name="homeboy">男</string>
    <string name="home_connected">已连接</string>
    <string name="home_connectting">连接中...</string>
    <string name="home_disconnectting">断开连接</string>
    <!--<string name="home_top"> 室温：0</string>-->
    <string name="home_bottom"> 正常</string>
    <string name="home_battery">电量:</string>
    <string name="home_state_low"> 可能低烧</string>
    <string name="home_state_high">可能发烧</string>

    <string name="setting_titile"> 体温（℃）</string>

    <string name="temp_over">温度超过了</string>
    <string name="after_tip">(十分钟后闹铃会继续响)</string>
    <string name="close_tip">关闭报警提醒</string>
    <string name="close_away">关闭防丢功能</string>
    <string name="child_away">孩子已经离开监视范围</string>
    <string name="know"> 知道了</string>
    <string name="charging"> 充电中</string>
    <string name="title_activity_common_map">CommonMapActivity</string>


</resources>
