<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include
        android:id="@+id/top_view"
        layout="@layout/top_view" />




    <RelativeLayout
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="45dp"

        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/set_lost"
            android:textColor="@color/them_text"
            android:textSize="17sp"/>


        <com.nightonke.jellytogglebutton.JellyToggleButton
            android:id="@+id/jtb_lost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:jtbLeftText="开"
            app:jtbRightText="关"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <include layout="@layout/line"/>

    <RelativeLayout
        android:id="@+id/item_message"
        android:layout_width="match_parent"
        android:layout_height="45dp"

        android:paddingRight="16dp">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"

            android:text="@string/set_fever"
            android:textColor="@color/them_text"
            android:textSize="17sp"/>

        <com.nightonke.jellytogglebutton.JellyToggleButton
            android:id="@+id/jtb_fever"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:jtbLeftText="开"
            app:jtbRightText="关"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            />
    </RelativeLayout>

    <include layout="@layout/line"/>

    <RelativeLayout
        android:id="@+id/rel_fever_temp"
        android:layout_width="match_parent"
        android:layout_height="45dp"

        android:paddingRight="16dp">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"

            android:text="@string/set_fever_temp"
            android:textColor="@color/them_text"
            android:textSize="17sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ico_next"/>

    </RelativeLayout>

    <include layout="@layout/line"/>

    <RelativeLayout
        android:id="@+id/item_settings"
        android:layout_width="match_parent"
        android:layout_height="45dp"

        android:paddingRight="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/set_type"
            android:textColor="@color/them_text"
            android:textSize="17sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ico_next"/>

    </RelativeLayout>

    <include layout="@layout/line"/>



    <RelativeLayout
        android:id="@+id/item_settings_device"
        android:layout_width="match_parent"
        android:layout_height="45dp"

        android:paddingRight="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/set_decive"
            android:textColor="@color/them_text"
            android:textSize="17sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ico_next"/>

    </RelativeLayout>

    <include layout="@layout/line"/>


    <RelativeLayout
        android:id="@+id/item_settings_about"
        android:layout_width="match_parent"
        android:layout_height="45dp"

        android:paddingRight="16dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/set_about"
            android:textColor="@color/them_text"
            android:textSize="17sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ico_next"/>

    </RelativeLayout>

    <include layout="@layout/line"/>

</LinearLayout>