<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/top_view"
        layout="@layout/top_view" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rel_img"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_baby_tem"
                    android:layout_width="fill_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@null"
                    android:focusable="false"
                    android:hint="@string/baby_fever_tem"
                    android:maxLength="16"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColorHint="#B9B9B9"
                    android:textCursorDrawable="@null" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#B9B9B9" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rel_img"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_baby_time"
                    android:layout_width="fill_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp"
                    android:background="@null"
                    android:focusable="false"
                    android:hint="@string/baby_fever_time"
                    android:maxLength="16"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColorHint="#B9B9B9"
                    android:textCursorDrawable="@null" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#B9B9B9" />
            </LinearLayout>


            <EditText
                android:id="@+id/et_baby_yao"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_border_edittext"
                android:gravity="top"
                android:hint="@string/baby_fever_yao"
                android:padding="8dp"
                android:textColorHint="@color/gery" />


            <EditText
                android:id="@+id/et_baby_wuli"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/shape_border_edittext"
                android:gravity="top"
                android:hint="@string/baby_fever_wuli"
                android:padding="8dp"
                android:textColorHint="@color/gery" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/textbg_select"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/save_baby"
                android:textColor="#ffffff" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
