<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical">
    <include
        android:id="@+id/include1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/top_view" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/et_mobile"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@null"
                android:ems="14"
                android:hint="@string/mobile_phone"
                android:inputType="number"
                android:maxLength="11"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:textColorHint="#B9B9B9"
                android:textCursorDrawable="@null" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#B9B9B9" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_verify_code"
                    android:layout_width="fill_parent"
                    android:layout_height="45dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/verify_code"
                    android:inputType="number"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:textColorHint="#B9B9B9"
                    android:textCursorDrawable="@null" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="#B9B9B9" />

                <Button
                    android:id="@+id/btn_get_verify_code_again"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="5dp"
                    android:background="@null"
                    android:text="@string/get_vetify_code"
                    android:textColor="#5B5B5B"/>

            </LinearLayout>


            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#B9B9B9" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:textColorHint="#B9B9B9"
                android:textCursorDrawable="@null" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#B9B9B9" />

            <EditText
                android:id="@+id/et_password_again"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="25dp"
                android:background="@null"
                android:hint="@string/comfirm_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:textColorHint="#B9B9B9"
                android:textCursorDrawable="@null" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#B9B9B9" />

            <Button
                android:padding="10dp"
                android:id="@+id/btn_signup_complete"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/textbg_select"
                android:gravity="center"
                android:text="@string/btn_ok"
                android:textSize="18sp"
                android:textColor="#ffffff" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
